<resources>
    <string name="app_name">Invoice</string>

    <string name="imgLogoSplah">Invoice logo</string>

    <string name="title_accountsigin">Inicio de Sesión</string>
    <string name="title_accountsignup">Registrar una Cuenta</string>
    <string name="title_customercreation">Crear un Cliente</string>
    <string name="title_userList">Lista de Usuarios</string>
    <string name="title_firebase">Firebase</string>
    <string name="title_printer">Printer</string>
    <string name="title_customerdetail">Detalles de Cliente</string>
    <string name="title_customerlist">Lista de Clientes</string>
    <string name="title_invoicecreation">Crear una Factura</string>
    <string name="title_ui">Interfaz Gráfica</string>
    <string name="title_utils">Uitlidades</string>
    <string name="title_accounts">Cuentas</string>
    <string name="title_invoicedetail">Detalles de Factura</string>
    <string name="title_invoicelist">Lista de Facturas</string>
    <string name="title_itemcreation">Crear un Producto</string>
    <string name="title_itemdetail">Detalles de Producto</string>
    <string name="title_itemlist">Lista de Productos</string>
    <string name="title_itemupdate">Editar un Producto</string>
    <string name="title_itempreferences">Preferencias de Producto</string>
    <string name="title_taskcreation">Crear una Tarea</string>
    <string name="title_taskdetail">Detalles de Tarea</string>
    <string name="title_tasklist">Lista de Tareas</string>
    <string name="title_taskupdate">Editar una Tarea</string>
    <string name="title_splash">Invoice</string>

    <string name="action_settings">Settings</string>


    <string name="btSignIn">Login</string>
    <string name="btSignUp">Users</string>
    <string name="btCustomerList">Customers</string>
    <string name="btInvoiceList">Invoices</string>
    <string name="btItemList">Items</string>
    <string name="btTaskList">Tasks</string>
    <string name="mainFragment">Pantalla Inicial</string>
    <string name="title_customerdialogfragment">CustomerDialogFragment</string>
    <string name="title_baseFragmentDialog">BaseFragmentDialog</string>
    <string name="settings_fragment_label">Preferencias</string>
    <string name="account_fragment_label">Cuenta</string>
    <string name="action_invoice">Facturas</string>
    <string name="action_task">Tareas</string>
    <string name="action_customer">Clientes</string>
    <string name="action_item">Productos</string>
    <string name="category_title_customer">Configuración listado de clientes</string>
</resources>