<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.hamilton.myapplication.MainActivity">

    <item
        android:id="@+id/action_invoice"
        android:title="@string/action_invoice"
        android:icon="@android:drawable/ic_menu_my_calendar" />

    <item
        android:id="@+id/action_item"
        android:title="@string/action_item"
        android:icon="@android:drawable/ic_search_category_default" />

    <item
        android:id="@+id/action_customer"
        android:title="@string/action_customer"
        android:icon="@android:drawable/ic_menu_agenda" />

    <item
        android:id="@+id/action_task"
        android:title="@string/action_task"
        android:icon="@android:drawable/ic_menu_month" />
</menu>