<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dash"
        android:text="@string/app_name"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />


    <ImageView
        android:id="@+id/bt_iv_login"
        android:layout_width="@dimen/btn_imageView_width"
        android:layout_height="@dimen/btn_imageView_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:src="@drawable/bt_login"
        app:layout_constraintEnd_toStartOf="@+id/bt_iv_users"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <ImageView
        android:id="@+id/bt_iv_users"
        android:layout_width="@dimen/btn_imageView_width"
        android:layout_height="@dimen/btn_imageView_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:src="@drawable/bt_account"
        app:layout_constraintBottom_toBottomOf="@+id/bt_iv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_iv_login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gratina"
        android:padding="8dp"
        android:text="@string/btSignIn"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bt_iv_login"
        app:layout_constraintStart_toStartOf="@+id/bt_iv_login"
        app:layout_constraintTop_toBottomOf="@+id/bt_iv_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gratina"
        android:padding="8dp"
        android:text="@string/btSignUp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bt_iv_users"
        app:layout_constraintStart_toStartOf="@+id/bt_iv_users"
        app:layout_constraintTop_toBottomOf="@+id/bt_iv_users" />

    <ImageView
        android:id="@+id/bt_iv_items"
        android:layout_width="@dimen/btn_imageView_width"
        android:layout_height="@dimen/btn_imageView_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/bt_item"
        app:layout_constraintEnd_toStartOf="@+id/bt_iv_customer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/bt_iv_customer"
        android:layout_width="@dimen/btn_imageView_width"
        android:layout_height="@dimen/btn_imageView_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:padding="4dp"
        android:src="@drawable/bt_customer"
        app:layout_constraintBottom_toBottomOf="@+id/bt_iv_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_iv_items"
        app:layout_constraintTop_toTopOf="@+id/bt_iv_items" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gratina"
        android:padding="8dp"
        android:text="@string/btItemList"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bt_iv_items"
        app:layout_constraintStart_toStartOf="@+id/bt_iv_items"
        app:layout_constraintTop_toBottomOf="@+id/bt_iv_items" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gratina"
        android:padding="8dp"
        android:text="@string/btCustomerList"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bt_iv_customer"
        app:layout_constraintStart_toStartOf="@+id/bt_iv_customer"
        app:layout_constraintTop_toBottomOf="@+id/bt_iv_customer" />


    <ImageView
        android:id="@+id/bt_iv_tasks"
        android:layout_width="@dimen/btn_imageView_width"
        android:layout_height="@dimen/btn_imageView_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:src="@drawable/bt_task"
        app:layout_constraintEnd_toStartOf="@+id/bt_iv_invoices"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/bt_iv_invoices"
        android:layout_width="@dimen/btn_imageView_width"
        android:layout_height="@dimen/btn_imageView_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:src="@drawable/bt_invoice"
        app:layout_constraintBottom_toBottomOf="@+id/bt_iv_tasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_iv_tasks"
        app:layout_constraintTop_toTopOf="@+id/bt_iv_tasks" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gratina"
        android:padding="8dp"
        android:text="@string/btTaskList"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bt_iv_tasks"
        app:layout_constraintStart_toStartOf="@+id/bt_iv_tasks"
        app:layout_constraintTop_toBottomOf="@+id/bt_iv_tasks" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gratina"
        android:padding="8dp"
        android:text="@string/btInvoiceList"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bt_iv_invoices"
        app:layout_constraintStart_toStartOf="@+id/bt_iv_invoices"
        app:layout_constraintTop_toBottomOf="@+id/bt_iv_invoices" />


</androidx.constraintlayout.widget.ConstraintLayout>